--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="header">
            <div class="container">
             <div class="logo">
-                <a href="https://bitly.com.vn/uby4bq" ><img src="IMG/Logo.png" alt="logo" style="width: 150px; height: 80px;" class="LOGO"><br></a>
+                <a href="https://bitly.com.vn/uby4bq" ><img src="img/Logo.png" alt="logo" style="width: 150px; height: 80px;" class="LOGO"><br></a>
             </div>
             <div class="navi">
                 <ul>
@@ -91,7 +91,7 @@
                     <p>Đây là câu chuyện về 1 Saiyan mới. Trái Đất đang hòa bình sau Giải đấu Sức mạnh. Nhận ra rằng vũ trụ vẫn còn rất nhiểu kẻ mạnh mà mình chưa thấy, Goku dành toàn bộ thời gian cho việc tập luyện để vươn lên những tầm cao mới. Và rồi 1 ngày, Goku và Vegeta đối mặt với 1 Saiyan tên là “Broly” người mà họ chưa bao giờ thấy trước đây. Tộc Saiyan được cho là đã hoàn toàn bị xóa sổ trong vụ nổ của hành tinh Vegeta, vậy thì tên này đang làm gì ở Trái Đất? Cuộc chạm trán giữa 3 Saiyan có 3 số phận khác nhau biến thành 1 trận chiện kỳ diệu, với ngay cả Frieza (trở về từ Địa ngục) cũng bị cuốn vào mớ hỗn độn đó.</p>
                 </div>
                 <div class="linkmovie">
-                    <a href="https://bitly.com.vn/uby4bq" ><img src="IMG/Logo.png" alt="logo" style="width: 150px; height: 80px;" class="LOGO">Xem phim<br></a>
+                    <a href="https://bitly.com.vn/uby4bq" ><img src="img/Logo.png" alt="logo" style="width: 150px; height: 80px;" class="LOGO">Xem phim<br></a>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
         <div class="footer">
             <div class="container">
                 <div class="about-footer">
-                    <a href="https://bitly.com.vn/uby4bq" ><img src="IMG/Logo.png" alt="logo" style="width: 150px; height: 80px;" class="LOGO"><br></a>
+                    <a href="https://bitly.com.vn/uby4bq" ><img src="img/Logo.png" alt="logo" style="width: 150px; height: 80px;" class="LOGO"><br></a>
                     <p>Dragon Ball Super Movie: Broly là bộ<br>phim thứ 20 trong series Dragon Ball,<br> và là Movie đầu tiên mang thương<br>hiệu Dragon Ball Super </p>
                 </div>
                 <div class="list-menu">
